Bug 405956 - Home view of "System Settings" with "Frequently used" becomes unreachable after opening any module
Summary: Home view of "System Settings" with "Frequently used" becomes unreachable aft...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.15.2
Platform: Neon Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-28 09:24 UTC by Massimiliano L
Modified: 2019-09-25 14:35 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.18.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Massimiliano L 2019-03-28 09:24:24 UTC
SUMMARY

STEPS TO REPRODUCE
1. Open "System Settings";
2. Notice the home view of the application with "frequently used" list;
2. Click on any configuration module.

OBSERVED RESULT
The home view of the application becomes unreachable from the application interface, unless the application is restarted.

EXPECTED RESULT
The home view should be accessible: being not just a "splash screen" but providing a feature ("frequently used" list), the user does not expect it to disappear after performing an action. In my view, this provides an inconsistent feeling and can be confusing.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: KDE neon 5.15
(available in About System)
KDE Plasma Version: 5.15.2
KDE Frameworks Version: 5.55.0
Qt Version: 5.12.0
Comment 1 Björn Feber 2019-09-25 14:31:57 UTC
Git commit de351c8ed6c322228d457fd9ec59d1f76ba37da6 by Björn Feber.
Committed on 25/09/2019 at 14:31.
Pushed by bfeber into branch 'master'.

Add "Show intro page" button to System Settings sidebar

Summary:
{F7262289}

Test Plan: Open System Settings and click on the "Show intro page" button.

Reviewers: #plasma, #vdg, ngraham

Reviewed By: #vdg, ngraham

Subscribers: ngraham, mart, #vdg, plasma-devel, #plasma

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D23274

M  +39   -1    sidebar/SidebarMode.cpp
M  +5    -0    sidebar/SidebarMode.h
M  +22   -6    sidebar/package/contents/ui/CategoriesPage.qml
M  +8    -2    sidebar/package/contents/ui/SubCategoryPage.qml

https://commits.kde.org/systemsettings/de351c8ed6c322228d457fd9ec59d1f76ba37da6