Add "Show intro page" button to System Settings sidebar

Summary:
BUG: 405956
{F7262289}

Test Plan: Open System Settings and click on the "Show intro page" button.

Reviewers: #plasma, #vdg, ngraham

Reviewed By: #vdg, ngraham

Subscribers: ngraham, mart, #vdg, plasma-devel, #plasma

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D23274